[project]
name = "insurance-nowcast"
version = "0.1.0"
description = "Insurance loss ratio nowcasting from high-frequency proxy data"
requires-python = ">=3.10"
dependencies = [
    "fredapi>=0.5.2",
    "pandas>=2.0",
    "numpy>=1.24",
    "statsmodels>=0.14",
    "requests>=2.31",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.1",
    "joblib>=1.3",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov"]

[project.scripts]
nowcast = "src.pipeline:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
